# test-raytracer

./: Cargo.toml  export.py  scene.json
src/: camera.rs  color.rs  hit.rs  light.rs  main.rs  material.rs  mesh.rs  ray.rs  scene.rs
src/serialize/: mod.rs
