[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
serde = {version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
clap = { version = "4.5.21", features = ["derive"] }
nalgebra-glm = "0.19.0"
rand = "0.8.5"
rerun = "0.20.0"